--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>SmartPad v2.0</title>
-    <link rel="stylesheet" href="styles.css" /> 
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>SmartPad v2.0</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
 
-  </head>
-  <body>
+  <div class="container"> <!-- ✅ Add this wrapper -->
+
     <header id="appTitle">
-     <h2><span>Your personal task manager</span></h2>
+      <h2><span>Your personal task manager</span></h2>
     </header>
+
     <div id="inputDiv">
       <form>
-        <input id="taskInput" type="text" placeholder="Add your task" >
-        <button id ='taskBtn' type="submit">Add</button>
+        <input id="taskInput" type="text" placeholder="Add your task" />
+        <button id="taskBtn" type="submit">Add</button>
       </form>
     </div>
+
     <div id="listDiv">
-      <ol id ='taskListDom'></ol>
-    </div>
-    <div id="completed">
-      <h1>
-        Completed Tasks
-      </h1>
-      <ol id = 'completedList'></ol>
+      <ol id="taskListDom"></ol>
     </div>
 
-    
-    
-    <script type="module" src='./main.js'></script>
-  </body>
+    <div id="completed">
+      <h1>Completed Tasks</h1>
+      <ol id="completedList"></ol>
+    </div>
+
+  </div> <!-- ✅ Close wrapper -->
+
+  <script type="module" src="./main.js"></script>
+</body>
 </html>
